lxqt: update config

--- a/config/lxqt/globalkeyshortcuts.conf
+++ b/config/lxqt/globalkeyshortcuts.conf
@@ -51,35 +51,35 @@ Comment=Switch to desktop 8
 Enabled=true
 path=/panel/desktopswitch/desktop_8
 
-[Alt%2BF1.10]
-Comment=Show/hide main menu
+[Alt%2B9.10]
+Comment=Switch to desktop 9
 Enabled=true
+path=/panel/desktopswitch/desktop_9
+
+[Alt%2BF1.11]
+Comment=Show/hide main menu
+Enabled=false
 path=/panel/mainmenu/show_hide
 
-[Alt%2BReturn.11]
+[Alt%2BReturn.12]
 Comment=Open a terminal
 Enabled=true
 Exec=xterm, -g, 125x50, -e, tmux
 
-[Control%2BAlt%2BD.12]
+[Control%2BAlt%2BD.13]
 Comment=Show desktop
 Enabled=false
 path=/panel/showdesktop/show_hide
 
-[Control%2BF11.13]
+[Control%2BF11.14]
 Comment=Switch to desktop 11
 Enabled=false
 path=/panel/desktopswitch/desktop_11
 
-[Control%2BF12.14]
+[Control%2BF12.15]
 Comment=Switch to desktop 12
 Enabled=false
 path=/panel/desktopswitch/desktop_12
-
-[Control%2BF9.15]
-Comment=Switch to desktop 9
-Enabled=false
-path=/panel/desktopswitch/desktop_9
 
 [Meta%2BF.16]
 Comment=PCManFM
