--- a/config/lxqt/session.conf
+++ b/config/lxqt/session.conf
@@ -5,7 +5,7 @@ lock_screen_before_power_actions=false
 window_manager=openbox
 
 [Environment]
-BROWSER=opera
+BROWSER=/usr/bin/google-chrome-stable
 GTK_CSD=0
 GTK_OVERLAY_SCROLLING=0
 TERM=xterm
