--- a/tmux.conf
+++ b/tmux.conf
@@ -39,11 +39,11 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind \; command-prompt
 bind : last-pane
 
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 
 bind H resize-pane -L 10
 bind J resize-pane -D 10
@@ -59,7 +59,7 @@ set -g status-justify left
 set -g status-left-length 0
 set -g status-left ''
 set -g status-right-length 100
-set -g status-right '#S - %Y.%m.%d %H:%M'
+set -g status-right '#{session_name}'
 
 ###########################
 # Colors
