tmux: ease managing windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,9 @@ bind J resize-pane -D 10
 bind K resize-pane -U 10
 bind L resize-pane -R 10
 
+bind ^T select-layout tiled
+bind ^H select-layout main-vertical
+
 ###########################
 # Status Bar
 ###########################
