--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@ set -g status-keys "vi"
 
 set -g detach-on-destroy off
 
-set -g mouse
+set -g mouse on
 
 ###########################
 #  Key Bindings
@@ -21,9 +21,13 @@ set -g mouse
 
 set -g prefix C-g
 
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy enter copy-pipe 'xclip -selection clipboard >/dev/null'
-bind-key -t vi-copy MouseDragEnd1Pane copy-pipe 'xclip -in -selection clipboard >/dev/null'
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-selection
+bind -T copy-mode-vi enter send -X copy-pipe-and-cancel 'xclip -selection clipboard >/dev/null'
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel 'xclip -in -selection clipboard >/dev/null'
+
+bind -n C-PgDn next-window
+bind -n C-PgUp previous-window
 
 bind C-p paste-buffer
 
@@ -39,11 +43,10 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind \; command-prompt
 bind : last-pane
 
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 bind H resize-pane -L 10
 bind J resize-pane -D 10
