--- a/tmux.conf
+++ b/tmux.conf
@@ -71,15 +71,11 @@ set -g status-right '#{session_name}'
 # Colors
 ###########################
 
-set -g status-bg black
-set -g status-fg white
+set -g status-style bg=white,fg=black
+set -g window-status-current-format '[#I:#W #F]'
 
-set-window-option -g window-status-current-format '[#I:#W #F]'
-set-window-option -g window-status-current-style fg=white
-set-window-option -g window-status-style fg=white
+set -g pane-border-style fg=white
+set -g pane-active-border-style fg=white
 
-set -g pane-border-style fg=black
-set -g pane-active-border-style fg=black
-
-set -g message-fg black
-set -g message-bg white
+set -g message-fg white
+set -g message-bg black
