tmux: random cleaning

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,13 +3,13 @@
 ###########################
 set -g default-terminal "screen-256color"
 set -g mode-keys vi
-set -sg escape-time 1
+set -g escape-time 1
 set -g base-index 1
 
 set -g pane-base-index 1
 set -g renumber-windows off
 
-set -g status-keys "vi"
+set -g status-keys vi
 
 set -g detach-on-destroy off
 
@@ -18,9 +18,6 @@ set -g mouse on
 ###########################
 #  Key Bindings
 ###########################
-
-set -g prefix C-g
-
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-selection
 bind -T copy-mode-vi enter send -X copy-pipe-and-cancel 'xclip -selection clipboard >/dev/null'
@@ -29,32 +26,10 @@ bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel 'xclip -in -
 bind -n C-PgDn next-window
 bind -n C-PgUp previous-window
 
-bind C-p paste-buffer
-
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
 bind c new-window -c '#{pane_current_path}'
-
-bind ^J select-pane -t :.+
-
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-bind \; command-prompt
-bind : last-pane
-
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-bind H resize-pane -L 10
-bind J resize-pane -D 10
-bind K resize-pane -U 10
-bind L resize-pane -R 10
-
-bind ^T select-layout tiled
-bind ^H select-layout main-vertical
 
 ###########################
 # Status Bar
@@ -70,7 +45,6 @@ set -g status-right '#{session_name}'
 ###########################
 # Colors
 ###########################
-
 set -g status-style bg=white,fg=black
 set -g window-status-current-format '[#I:#W #F]'
 
