--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,5 @@
-###########################
-#  Configuration
-###########################
+# Configuration
 set -g base-index 1
-set -g default-terminal "screen-256color"
 set -g detach-on-destroy off
 set -g escape-time 1
 set -g mode-keys vi
@@ -11,37 +8,44 @@ set -g pane-base-index 1
 set -g renumber-windows off
 set -g status-keys vi
 
-###########################
-#  Key Bindings
-###########################
+# Key Bindings
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-selection
 bind -T copy-mode-vi enter send -X copy-pipe-and-cancel 'xclip -selection clipboard >/dev/null'
 bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel 'xclip -in -selection clipboard >/dev/null'
 
-bind -n C-PgDn next-window
-bind -n C-PgUp previous-window
+bind 'c' new-window -c '#{pane_current_path}'
+bind '-' split-window -c '#{pane_current_path}'
+bind '"' split-window -c '#{pane_current_path}'
+bind '|' split-window -h -c '#{pane_current_path}'
+bind '%' split-window -h -c '#{pane_current_path}'
+bind 'X' kill-session
 
-bind | split-window -h -c '#{pane_current_path}'
-bind - split-window -v -c '#{pane_current_path}'
+bind ';' command-prompt
+bind ':' last-pane
 
-bind c new-window -c '#{pane_current_path}'
-
-###########################
 # Status Bar
-###########################
-set -g status-interval 30
-set -g status-justify left
-set -g status-left ''
+set -g status-interval 60
 set -g status-left-length 0
-set -g status-right '#{session_name}'
+set -g status-left ''
 set -g status-right-length 100
+set -g status-right '[#S]'
 
-###########################
 # Colors
-###########################
 set -g status-style bg=white,fg=black
-set -g window-status-current-format '[#I:#W #F]'
 
 set -g pane-border-style fg=white
 set -g pane-active-border-style fg=white
+# Smart pane switching with awareness of Vim splits.
+# See:
+#   * https://github.com/christoomey/vim-tmux-navigator
+#   * https://github.com/christoomey/vim-tmux-navigator/pull/237
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "if-shell 'expr #{pane_left}' 'select-pane -L'"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "if-shell 'expr #{window_height} - #{pane_bottom} - 1' 'select-pane -D'"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "if-shell 'expr #{pane_top}' 'select-pane -U'"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "if-shell 'expr #{window_width} - #{pane_right} - 1' 'select-pane -R'"
+bind-key -T copy-mode-vi C-h if-shell 'expr #{pane_left}' 'select-pane -L'
+bind-key -T copy-mode-vi C-j if-shell 'expr #{window_height} - #{pane_bottom} - 1' 'select-pane -D'
+bind-key -T copy-mode-vi C-k if-shell 'expr #{pane_top}' 'select-pane -U'
+bind-key -T copy-mode-vi C-p send-keys C-c C-p
