--- a/tmux.conf
+++ b/tmux.conf
@@ -49,3 +49,4 @@ bind-key -T copy-mode-vi C-h if-shell 'expr #{pane_left}' 'select-pane -L'
 bind-key -T copy-mode-vi C-j if-shell 'expr #{window_height} - #{pane_bottom} - 1' 'select-pane -D'
 bind-key -T copy-mode-vi C-k if-shell 'expr #{pane_top}' 'select-pane -U'
 bind-key -T copy-mode-vi C-p send-keys C-c C-p
+bind-key -n C-u if-shell "$is_vim" "send-keys C-u" 'copy-mode; send-keys PgUp'
