--- a/tmux.conf
+++ b/tmux.conf
@@ -7,12 +7,13 @@ set -g mouse on
 set -g pane-base-index 1
 set -g renumber-windows off
 set -g status-keys vi
+set -g focus-events on
 
 # Key Bindings
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-selection
-bind -T copy-mode-vi enter send -X copy-pipe-and-cancel 'xclip -selection clipboard >/dev/null'
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel 'xclip -in -selection clipboard >/dev/null'
+bind -T copy-mode-vi C-c send -X copy-pipe-and-cancel 'pbcopy'
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel 'pbcopy'
 
 bind 'c' new-window -c '#{pane_current_path}'
 bind '-' split-window -c '#{pane_current_path}'
@@ -32,10 +33,13 @@ set -g status-right-length 100
 set -g status-right '[#S]'
 
 # Colors
-set -g status-style bg=white,fg=black
+set -g status-style bg=black,fg=white
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=black
 
-set -g pane-border-style fg=white
-set -g pane-active-border-style fg=white
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=black
+
 # Smart pane switching with awareness of Vim splits.
 # See:
 #   * https://github.com/christoomey/vim-tmux-navigator
