--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,7 @@ set -g mouse on
 set -g pane-base-index 1
 set -g renumber-windows off
 set -g status-keys vi
+set -g focus-events on
 
 # Key Bindings
 bind -T copy-mode-vi v send -X begin-selection
@@ -32,10 +33,13 @@ set -g status-right-length 100
 set -g status-right '[#S]'
 
 # Colors
-set -g status-style bg=white,fg=black
+set -g status-style bg=black,fg=white
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=black
 
-set -g pane-border-style fg=white
-set -g pane-active-border-style fg=white
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=black
+
 # Smart pane switching with awareness of Vim splits.
 # See:
 #   * https://github.com/christoomey/vim-tmux-navigator
