--- a/tmux.conf
+++ b/tmux.conf
@@ -54,3 +54,14 @@ bind-key -T copy-mode-vi C-j if-shell 'expr #{window_height} - #{pane_bottom} - 
 bind-key -T copy-mode-vi C-k if-shell 'expr #{pane_top}' 'select-pane -U'
 bind-key -T copy-mode-vi C-p send-keys C-c C-p
 bind-key -n C-u if-shell "$is_vim" "send-keys C-u" 'copy-mode; send-keys PgUp'
+bind-key -n M-] next-window
+bind-key -n M-[ previous-window
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
