kitty: suitable colors for light theme

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -609,7 +609,7 @@ hide_window_decorations yes
 #: Some text or a unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has some activity.
 
-# tab_title_template "{title}"
+tab_title_template "{index}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -638,7 +638,7 @@ hide_window_decorations yes
 
 #: Tab bar colors and styles
 
-# tab_bar_background none
+tab_bar_background #000
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
@@ -729,17 +729,17 @@ background #ebebe6
 #: red
 
 # color2  #19cb00
-# color10 #23fd00
+color10 #23ad00
 
 #: green
 
 # color3  #cecb00
-# color11 #fffd00
+color11 #aaaa00
 
 #: yellow
 
 # color4  #0d73cc
-# color12 #1a8fff
+color12 #1a8aaa
 
 #: blue
 
@@ -749,7 +749,7 @@ background #ebebe6
 #: magenta
 
 # color6  #0dcdcd
-# color14 #14ffff
+color14 #14aaaa
 
 #: cyan
 
