kitty: use hack nerd font

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,7 +9,7 @@
 # font_family Andale Mono
 # font_family Courier New
 # font_family FiraCode Nerd Font Mono
-font_family Hack
+font_family Hack Nerd Font Mono
 # font_family Hasklig
 # font_family JetBrains Mono Regular
 # font_family Menlo
@@ -509,7 +509,7 @@ detect_urls no
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations yes
+# hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -792,7 +792,7 @@ shell /opt/homebrew/bin/tmux
 
 #: Hide the kitty window from running tasks (⌘+Tab) on macOS.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
