kitty: keep only used font_family

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,18 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family Andale Mono
-# font_family Courier New
-# font_family FiraCode Nerd Font Mono
-font_family Hack Nerd Font Mono
-# font_family Hasklig
-# font_family JetBrains Mono Regular
-# font_family Menlo
-# font_family Monaco
-# font_family Monoid
-# font_family Operator Mono Book
-# font_family Osaka
-# font_family PT Mono
+font_family Hack
 
 bold_font        auto
 italic_font      auto
