--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g pane-base-index 1
 set -g renumber-windows off
 set -g status-keys vi
 set -g focus-events on
+set -g status-position top
 
 # Key Bindings
 bind -T copy-mode-vi v send -X begin-selection
@@ -30,10 +31,10 @@ set -g status-interval 60
 set -g status-left-length 0
 set -g status-left ''
 set -g status-right-length 100
-set -g status-right '[#S]'
+set -g status-right '#S'
 
 # Colors
-set -g status-style bg=black,fg=white
+set -g status-style bg=black,fg=color255
 set -g pane-border-style fg=black
 set -g pane-active-border-style fg=black
 
@@ -51,6 +52,7 @@ bind-key -T copy-mode-vi C-j if-shell 'expr #{window_height} - #{pane_bottom} - 
 bind-key -T copy-mode-vi C-k if-shell 'expr #{pane_top}' 'select-pane -U'
 bind-key -T copy-mode-vi C-p send-keys C-c C-p
 bind-key -n C-u if-shell "$is_vim" "send-keys C-u" 'copy-mode; send-keys PgUp'
+bind-key -n M-t new-window -c '#{pane_current_path}'
 bind-key -n M-] next-window
 bind-key -n M-[ previous-window
 bind-key -n M-1 select-window -t 1
