--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,14 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family Hack
+# font_family Berkeley Mono
+font_family Hack Nerd Font Mono
+# font_family DejaVuSansM Nerd Font Mono
+# font_family SF Mono
+# font_family Menlo
+# font_family Consolas
+# font_family Andale Mono
+# font_family PT Mono
 
 bold_font        auto
 italic_font      auto
@@ -47,6 +54,8 @@ font_size 16.0
 #: <https://github.com/fribidi/fribidi#executable> to get BIDI
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
+
+adjust_line_height  150%
 
 # adjust_line_height  0
 # adjust_column_width 0
@@ -309,7 +318,7 @@ detect_urls no
 #: The modifiers to override mouse selection even when a terminal
 #: application has grabbed the mouse
 
-# select_by_word_characters @-./_~?&=%+#
+select_by_word_characters @-./_~?&%+#
 
 #: Characters considered part of a word when double clicking. In
 #: addition to these characters any character that is marked as an
@@ -406,8 +415,8 @@ detect_urls no
 #: Window layout {{{
 
 # remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
+initial_window_width  640
+initial_window_height 400
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -417,6 +426,7 @@ detect_urls no
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
+# enabled_layouts tall:bias=66;full_size=1,stack
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -439,7 +449,7 @@ detect_urls no
 #: be pts. Note that borders are displayed only when more than one
 #: window is visible. They are meant to separate multiple windows.
 
-# draw_minimal_borders yes
+draw_minimal_borders yes
 
 #: Draw only the minimum borders needed. This means that only the
 #: minimum needed borders for inactive windows are drawn. That is only
@@ -478,12 +488,10 @@ detect_urls no
 #: this option. Using a value of center means the cell area will be
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
-
-# active_border_color #00ff00
+# active_border_color #cccccc
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
-
 # inactive_border_color #cccccc
 
 #: The color for the border of inactive windows
@@ -493,12 +501,12 @@ detect_urls no
 #: The color for the border of inactive windows in which a bell has
 #: occurred
 
-# inactive_text_alpha 1.0
+inactive_text_alpha 0.75
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations yes
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -540,7 +548,7 @@ detect_urls no
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+tab_bar_edge top
 
 #: Which edge to show the tab bar on, top or bottom
 
@@ -548,7 +556,7 @@ detect_urls no
 
 #: The margin to the left and right of the tab bar (in pts)
 
-# tab_bar_style fade
+tab_bar_style separator
 
 #: The tab bar style, can be one of: fade, separator, powerline, or
 #: hidden. In the fade style, each tab's edges fade into the
@@ -558,12 +566,12 @@ detect_urls no
 #: create a mapping for the select_tab action which presents you with
 #: a list of tabs and allows for easy switching to a tab.
 
-# tab_bar_min_tabs 2
+tab_bar_min_tabs 2
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown
 
-# tab_switch_strategy previous
+tab_switch_strategy left
 
 #: The algorithm to use when switching to a tab when the current tab
 #: is closed. The default of previous will switch to the last used
@@ -580,7 +588,7 @@ detect_urls no
 #: can change the number of cells used by adding/removing entries to
 #: this list.
 
-# tab_separator " ┇"
+tab_separator ""
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
@@ -596,7 +604,9 @@ detect_urls no
 #: Some text or a unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has some activity.
 
-tab_title_template "{index}"
+# tab_title_template "  {bell_symbol}{activity_symbol}{'[stack] ' if layout_name == 'stack' and num_windows > 1 else ''}{fmt.fg.tab}{index}: {title.split()[0].split('/')[-1]}  "
+tab_title_template "  {bell_symbol}{activity_symbol}{'[stack] ' if layout_name == 'stack' and num_windows > 1 else ''}{fmt.fg.tab}{index}: {title}  "
+
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -630,7 +640,7 @@ tab_title_template "{index}"
 
 #: Advanced {{{
 
-shell /opt/homebrew/bin/tmux
+# shell /opt/homebrew/bin/tmux
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
@@ -656,7 +666,7 @@ shell /opt/homebrew/bin/tmux
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-# allow_remote_control no
+# allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
@@ -669,7 +679,7 @@ shell /opt/homebrew/bin/tmux
 #: you want to prevent programs running on a remote computer over ssh
 #: from controlling kitty.
 
-# listen_on none
+# listen_on unix:/tmp/mykitty
 
 #: Tell kitty to listen to the specified unix/tcp socket for remote
 #: control connections. Note that this will apply to all kitty
@@ -683,7 +693,7 @@ shell /opt/homebrew/bin/tmux
 #: remote control. See the help for kitty --listen-on for more
 #: details.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
@@ -886,7 +896,7 @@ macos_quit_when_last_window_closed yes
 
 #:     map ctrl+f>2 set_font_size 20
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
@@ -917,7 +927,6 @@ clear_all_shortcuts yes
 #: no selection.
 
 map cmd+c        copy_to_clipboard
-# map kitty_mod+v  paste_from_clipboard
 map cmd+v        paste_from_clipboard
 # map kitty_mod+s  paste_from_selection
 # map shift+insert paste_from_selection
@@ -956,7 +965,7 @@ map cmd+v        paste_from_clipboard
 # map cmd+home            scroll_home
 # map kitty_mod+end       scroll_end
 # map cmd+end             scroll_end
-# map kitty_mod+h         show_scrollback
+# map kitty_mod+u         show_scrollback
 
 #: You can pipe the contents of the current screen + history buffer as
 #: STDIN to an arbitrary program using the ``launch`` function. For
@@ -972,7 +981,7 @@ map cmd+v        paste_from_clipboard
 
 #: Window management {{{
 
-# map kitty_mod+enter new_window
+# map cmd+enter new_window_with_cwd
 
 #: You can open a new window running an arbitrary program, for
 #: example::
@@ -1000,14 +1009,20 @@ map cmd+v        paste_from_clipboard
 #: For more details, see launch.
 
 # map cmd+enter   new_window
-# map kitty_mod+n new_os_window
+map cmd+n new_os_window
 
 #: Works like new_window above, except that it opens a top level OS
 #: kitty window. In particular you can use new_os_window_with_cwd to
 #: open a window with the current working directory.
 
+# map ctrl+j kitten pass_keys.py bottom ctrl+j
+# map ctrl+k kitten pass_keys.py top    ctrl+k
+# map ctrl+h kitten pass_keys.py left   ctrl+h
+# map ctrl+l kitten pass_keys.py right  ctrl+l
+
 # map cmd+n       new_os_window
 # map kitty_mod+w close_window
+map cmd+w close_window
 # map shift+cmd+d close_window
 # map kitty_mod+] next_window
 # map kitty_mod+[ previous_window
@@ -1039,13 +1054,17 @@ map cmd+v        paste_from_clipboard
 
 #: Tab management {{{
 
+# map cmd+} next_tab
+# map cmd+{ previous_tab
+# map cmd+] next_tab
+# map cmd+[ previous_tab
 # map kitty_mod+right next_tab
 # map shift+cmd+]     next_tab
 # map ctrl+tab        next_tab
 # map kitty_mod+left  previous_tab
 # map shift+cmd+[     previous_tab
 # map shift+ctrl+tab  previous_tab
-# map kitty_mod+t     new_tab
+# map cmd+t     new_tab_with_cwd
 # map cmd+t           new_tab
 # map kitty_mod+q     close_tab
 # map cmd+w           close_tab
@@ -1061,6 +1080,17 @@ map cmd+v        paste_from_clipboard
 
 #:     map ctrl+alt+1 goto_tab 1
 #:     map ctrl+alt+2 goto_tab 2
+
+# map cmd+1 goto_tab 1
+# map cmd+2 goto_tab 2
+# map cmd+3 goto_tab 3
+# map cmd+4 goto_tab 4
+# map cmd+5 goto_tab 5
+# map cmd+6 goto_tab 6
+# map cmd+7 goto_tab 7
+# map cmd+8 goto_tab 8
+# map cmd+9 goto_tab 9
+# map cmd+0 goto_tab 10
 
 #: Just as with new_window above, you can also pass the name of
 #: arbitrary commands to run when using new_tab and use
@@ -1093,12 +1123,12 @@ map cmd+v        paste_from_clipboard
 # map kitty_mod+plus        change_font_size all +2.0
 # map kitty_mod+kp_add      change_font_size all +2.0
 # map cmd+plus              change_font_size all +2.0
-map cmd+plus              change_font_size all +2.0
+map cmd+plus              change_font_size all +1.0
 map cmd+equal             change_font_size all 0
 # map cmd+shift+equal       change_font_size all +2.0
 # map kitty_mod+minus       change_font_size all -2.0
 # map kitty_mod+kp_subtract change_font_size all -2.0
-map cmd+minus             change_font_size all -2.0
+map cmd+minus             change_font_size all -1.0
 # map cmd+shift+minus       change_font_size all -2.0
 # map kitty_mod+backspace   change_font_size all 0
 # map cmd+0                 change_font_size all 0
@@ -1231,4 +1261,4 @@ map cmd+minus             change_font_size all -2.0
 
 # }}}
 
-include current-theme.conf
+paste_actions filter
