--- a/tmux.conf
+++ b/tmux.conf
@@ -32,11 +32,22 @@ set -g status-left-length 0
 set -g status-left ''
 set -g status-right-length 100
 set -g status-right '#S'
+set -g window-status-current-format '[#I:#W]'
 
-# Colors
-set -g status-style bg=black,fg=color255
-set -g pane-border-style fg=black
-set -g pane-active-border-style fg=black
+# Colors light
+set -g status-style bg=color232,fg=color255
+set -g pane-border-style fg=color232
+set -g pane-active-border-style fg=color232
+
+# # Colors dark
+# set -g status-style bg=color255,fg=color0
+# set -g pane-border-style fg=color255
+# set -g pane-active-border-style fg=color255
+
+# # Colors Dracula
+# set -g status-style bg=color0,fg=color255
+# set -g pane-border-style fg=color255
+# set -g pane-active-border-style fg=color255
 
 # Smart pane switching with awareness of Vim splits.
 # See:
